--- a/NovoTeX/BodyMatter/1r/Intro.tex
+++ b/NovoTeX/BodyMatter/1r/Intro.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Coses per fer}
+\part{Coses per fer}
 \chapter{Aviat}
 	Podeu trobar la versió actualitzada d'aquest pdf seguint aquest \href{https://claudilleyda.github.io}{link}.
 	%	\subsection{Ignorar}
@@ -111,6 +111,9 @@
 	\end{proposition}
 	\begin{proposition}
 		Sigui \(f\colon[a,b]\to\mathbb{R}\) una funció acotada i monòtona. Aleshores \(f\) és integrable Riemann.
+	\end{proposition}
+	\begin{proposition}
+		Sigui~\(f\colon[a,b]\longrightarrow\RR\) una funció monòtona. Aleshores el conjunt de punts de discontinuïtat de~\(f\) és com a màxim numerable.
 	\end{proposition}
 	\subsection{Teoremes}
 	\begin{theorem}[Equivalència entre normes]
