--- a/NovoTeX/BodyMatter/2n/MetodesNumerics.tex
+++ b/NovoTeX/BodyMatter/2n/MetodesNumerics.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Mètodes numèrics}
+\part{Mètodes numèrics}
 \chapter{Interpolació numèrica} % CRONOLOGIA INTERPOLACIÓ LINK https://imagescience.org/meijering/research/chronology/
 	% LINK https://en.wikibooks.org/wiki/Introduction_to_Numerical_Methods/Interpolation
 	Sovint podem mesurar un procés físic com un número de punts (per exemple, la temperatura d'una habitació en diferents instants de temps), però no tenim una expressió analítica per aquest procés que ens permeti calcular el seu valor en un punt arbitrari. L'interpolació ens proporciona un mètode simple per estimar aquesta expressió analítica en el rang dels punts mesurats\footnote{Si el punt que avaluem es troba fora del rang aquest problema s'anomena extrapolació i sol ser menys precís que la interpolació.}.
