--- a/NovoTeX/BodyMatter/3r/EDOS2.tex
+++ b/NovoTeX/BodyMatter/3r/EDOS2.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Equacions diferencials ordinàries \rom{2}}
+\part{Equacions diferencials ordinàries \rom{2}}
 \begin{comment}
 %	\emph{\hypersetup{urlcolor=black}\href{https://www.urbandictionary.com/define.php?term=wtf}{wtf} is this assignatura}
 \section{Òrbites d'una equació diferencial}
@@ -198,4 +198,5 @@
 		o la llei de la conservació escalar
 		\[\frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.\]
 	\end{example}
+	
 \end{document} 
