--- a/NovoTeX/BodyMatter/3r/Topologia.tex
+++ b/NovoTeX/BodyMatter/3r/Topologia.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Topologia}
+\part{Topologia}
 \chapter{L'espai topològic}
 \section{Espais mètrics}
 	\subsection{Boles i oberts}
@@ -1074,7 +1074,7 @@
 				\pi_{Y}\colon X\times Y&\longrightarrow Y \\
 				(x,y)&\longmapsto y
 			\end{align*}
-			són aplicacions contínues, i per la proposició \ref{prop:la compacitat és una propietat topològica} trobem que \(X\) i \(Y\) són compactes.
+			són aplicacions contínues, i per la proposició \myref{prop:la compacitat és una propietat topològica} trobem que \(X\) i \(Y\) són compactes.
 			
 			Veiem ara que la condició és necessària (\(\implicatper\)). Suposem doncs que \(X\) i \(Y\) són compactes i sigui \(\{\obert{W}_{i}\}_{i\in I}\) un recobriment obert de \(X\times Y\).
 			
