--- a/NovoTeX/BodyMatter/2n/AnalisiMatematic.tex
+++ b/NovoTeX/BodyMatter/2n/AnalisiMatematic.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Anàlisi matemàtica}
+\part{Anàlisi matemàtica}
 \chapter{Sèries}
 \section{Sèries numèriques}
 	\subsection{Convergència d'una sèrie numèrica}
@@ -778,7 +778,7 @@
 			és convergent, com volíem veure.
 		\end{proof}
 	\end{theorem}
-	\begin{example}%Buscar un altre exemple. Conflicte amb \ref{ex:sèrie absolutament convergent} %Crec que al final no, però comprovar amb calma (Claudi del futur)
+	\begin{example}%Buscar un altre exemple. Conflicte amb \myref{ex:sèrie absolutament convergent} %Crec que al final no, però comprovar amb calma (Claudi del futur)
 		\label{ex:Teorema de Dirichlet per sèries numèriques}
 		Volem estudiar la convergència de la sèrie
 		\[\sum_{n=1}^{\infty}\frac{\sin(n)}{n}.\]
@@ -890,7 +890,7 @@
 		\begin{proof}
 			Fixem un natural \(N\) i considerem
 			\[M=\max\{\sigma(1),\dots,\sigma(N)\}\]
-			i com que, per la definició de \ref{def:sèrie de termes positius}, tenim que \(a_{n}\geq0\) per a tot \(n\) natural trobem que
+			i com que, per la definició de \myref{def:sèrie de termes positius}, tenim que \(a_{n}\geq0\) per a tot \(n\) natural trobem que
 			\[\sum_{n=0}^{N}a_{\sigma(n)}\leq\sum_{n=0}^{M}a_{n},\]
 			i per la definició de \myref{def:sèrie convergent} trobem que
 			\[\sum_{n=0}^{\infty}a_{\sigma(n)}\leq\sum_{n=0}^{\infty}a_{n}.\qedhere\]
@@ -936,7 +936,7 @@
 		\begin{proof}
 			Aquest enunciat té sentit per la proposició \myref{prop:la reordenada d'una sèrie absolutament convergent és absolutament convergent}.
 			
-			Per la definició de \ref{def:convergència absoluta d'una sèrie} tenim que la sèrie \(\sum_{n=0}^{\infty}a_{n}\) és absolutament convergent si i només si les sèries \(\sum_{n=0}^{\infty}a^{+}_{n}\) i \(\sum_{n=0}^{\infty}a^{-}_{n}\) són convergents. Per tant trobem que
+			Per la definició de \myref{def:convergència absoluta d'una sèrie} tenim que la sèrie \(\sum_{n=0}^{\infty}a_{n}\) és absolutament convergent si i només si les sèries \(\sum_{n=0}^{\infty}a^{+}_{n}\) i \(\sum_{n=0}^{\infty}a^{-}_{n}\) són convergents. Per tant trobem que
 			\begin{align*}
 				\sum_{n=0}^{\infty}a_{n}&=\sum_{n=0}^{\infty}\left(a^{+}_{n}-a^{-}_{n}\right) \tag{\ref{obs:sumes de la part positiva i negativa d'un nombre}}\\
 				&=\sum_{n=0}^{\infty}a^{+}_{n}-\sum_{n=0}^{\infty}a^{-}_{n} \\
@@ -1699,8 +1699,8 @@
 	\subsection{La funció Gamma d'Euler}
 	\begin{definition}[Gamma d'Euler]
 		\labelname{Gamma d'Euler}\label{def:Gamma d'Euler}
-		Sigui \(x\) un real positiu. Aleshores definim
-		\[\Gamma(x)=\int_{0}^{\infty}t^{x-1}\e^{-t}\diff t\]
+		Sigui \(r\) un real positiu. Aleshores definim
+		\[\Gamma(r)=\int_{0}^{\infty}x^{r-1}\e^{-x}\diff x\]
 		com la funció Gamma d'Euler.
 	\end{definition}
 	\begin{theorem}
@@ -1712,8 +1712,8 @@
 	\end{theorem}
 	\begin{lemma} % Repassar, fa aquesta part una mica al revés?
 		\label{lema:la Gamma d'Euler es comporta com un factorial amb reals}
-		Sigui \(x>0\) un real. Aleshores
-		\[\Gamma(x+1)=x\Gamma(x).\]
+		Sigui \(r>0\) un real. Aleshores
+		\[\Gamma(r+1)=r\Gamma(r).\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -1724,7 +1724,7 @@
 		\[\Gamma(1)=1.\]
 		\begin{proof} %REFS? % NOTACIÓ EVALUACIÓ
 			Per la definició de \myref{def:Gamma d'Euler} tenim que
-			\[\Gamma(1)=\int_{0}^{\infty}\e^{-t}\diff t=\left.\frac{\e^{-t}}{-1}\right\vert_{0}^{\infty}=1.\qedhere\]
+			\[\Gamma(1)=\int_{0}^{\infty}\e^{-x}\diff x=\left.\frac{\e^{-x}}{-1}\right\vert_{x=0}^{\infty}=1.\qedhere\]
 		\end{proof}
 	\end{observation}
 	\begin{lemma} % Repassar, fa aquesta part una mica al revés?
@@ -1738,7 +1738,7 @@
 	\begin{theorem}
 		\label{thm:fórmula d'Stirling}
 		Es satisfà
-		\[\lim_{x\to\infty}\frac{\Gamma(x+1)}{e^{-x}x^{x}\sqrt{2\uppi x}}=1.\]
+		\[\lim_{r\to\infty}\frac{\Gamma(r+1)}{e^{-r}r^{r}\sqrt{2\uppi r}}=1.\]
 		\begin{proof}
 			%TODO
 		\end{proof}
@@ -2031,7 +2031,7 @@
 			
 			Considerem
 			\[\sup_{x\in[0,1]}\abs{(f\convolucio\phi_{\varepsilon})(x)-f(x)}.\]
-			Tenim qe
+			Tenim que
 			\begin{align*}
 				\sup_{x\in[0,1]}\abs{(f\convolucio\phi_{\varepsilon})(x)-f(x)}&=\sup_{x\in[0,1]}\abs{\int_{0}^{1}f(t)\phi_{\varepsilon}(x-t)\diff t-f(x)} \tag{\ref{def:convolució de dues extensions periòdiques}} \\
 				&=\sup_{x\in[0,1]}\abs{\int_{0}^{1}f(t)\phi_{\varepsilon}(x-t)\diff t-\int_{0}^{1}f(x)\phi_{\varepsilon}(x-t)\diff t} \\
@@ -2041,7 +2041,7 @@
 			\end{align*}
 			 Tenim per hipòtesi que \(f\) és contínua, i per la definició de \myref{def:funcio continua} trobem que per a tot \(\eta>0\) existeix un \(\delta>0\) tal que per a tot \(t\) satisfent \(\abs{x-t}>\delta\) tenim
 			 \[\abs{f(x)-f(x)}\leq\frac{\eta}{2}.\]
-			 Per tant, amb \(I=[x-\frac{1}{2},x+\frac{1}{2}]\) i \(J=[0,1]\), % Treure la notació de la J i arreglar el hspace
+			 Per tant, amb \(I=[x-\frac{1}{2},x+\frac{1}{2}]\) i \(J=[0,1]\), % Treure la notació de la J i arreglar el hspace % opció [intlimits] a {amsmath}
 			 \begin{multline*}
 				 \sup_{x\in J}\int_{x-\frac{1}{2}}^{x+\frac{1}{2}}\abs{f(t)-f(x)}\phi_{\varepsilon}(x-t)\diff t = \\
 				 =\sup_{x\in J}\left(\int_{\substack{t\in I\\\abs{x-t}<\delta}}\abs{f(t)-f(x)}\phi_{\varepsilon}(x-t)\diff t+\int_{\substack{t\in I\\\abs{x-t}>\delta}}\abs{f(t)-f(x)}\phi_{\varepsilon}(x-t)\diff t\right) \hfill\\
