--- a/NovoTeX/BodyMatter/2n/EstructuresAlgebraiques.tex
+++ b/NovoTeX/BodyMatter/2n/EstructuresAlgebraiques.tex
@@ -1,7 +1,7 @@
-\documentclass[../../Main.tex]{subfiles}
+\documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\assignatura{Estructures algebraiques}
+\part{Estructures algebraiques}
 \chapter{Teoria de grups}
 \section{Grups}
 	\subsection{Propietats bàsiques dels grups}
@@ -1284,9 +1284,6 @@
 			Veiem ara que la condició és necessària (\(\implicatper\)). Suposem que per a tot \(x,y\in I\), \(r\in R\) tenim \(x-y\in I\) i \(r\cdot x\in I\). Per la proposició \myref{prop:condició equivalent a subgrup} tenim que \(I\) és un subgrup del grup \(R\) amb la suma \(+\), i per la definició d'\myref{def:ideal d'un anell} tenim que \(I\) és un ideal de \(R\).
 		\end{proof}
 	\end{proposition}
-	\begin{notation}
-		Si \((a)\) és un ideal principal d'un anell \(R\) denotarem \((a)\trianglelefteq R\).
-	\end{notation}
 	\begin{proposition}
 		\label{prop:combinació d'ideals per obtenir ideals}
 		Siguin \(I,J\) dos ideals d'un anell \(R\) amb la suma \(+\) i el producte \(\cdot\). Aleshores els conjunts
@@ -1335,6 +1332,9 @@
 		\label{def:ideal principal}
 		Sigui \(I\) un ideal d'un anell \(R\) amb el producte \(\cdot\) tal que \(I=\{a\}R=R\{a\}=\{r\cdot a\mid r\in R\}\) per a cert \(a\in I\). Aleshores direm que \(I\) és un anell principal de \(R\). Ho denotarem amb \(I=(a)\).
 	\end{definition}
+	\begin{notation}
+		Si \((a)\) és un ideal principal d'un anell \(R\) denotarem \((a)\trianglelefteq R\).
+	\end{notation}
 	\subsection{Cossos i l'anell quocient}
 	\begin{definition}[Cos] % Refer amb la definició de cos nova
 		\labelname{cos}
@@ -1360,7 +1360,7 @@
 			\begin{enumerate}
 				\item Reflexiva: Prenem \(x\in R\). Per l'observació \myref{obs:l'element neutre per la suma pertany a l'ideal} tenim que \(0\in I\), i per tant \(x-x=0\in I\) i veiem que \(x\sim x\).
 				\item Simètrica: Siguin \(x_{1},x_{2}\in I\) tals que \(x_{1}\sim x_{2}\). Això és que \(x_{1}-x_{2}\in I\). Per la definició d'\myref{def:ideal d'un anell} tenim que \((-1)\cdot(x_{1}-x_{2})\in I\), i per la proposició \myref{prop:propietats bàsiques anells} tenim que \(x_{2}-x_{1}\in I\), és a dir, \(x_{2}\sim x_{1}\).
-				\item Transitiva: Siguin \(x_{1},x_{2},x_{3}\in R\) tals que \(x_{1}\sim x_{2}\) i \(x_{2}\sim x_{3}\). Per la definició d'\myref{def:ideal d'un anell} tenim que \(x_{3}-x_{2}\in I\), i per la proposició \ref{prop:condició equivalent a ideal d'un anell} tenim que \(x_{1}-x_{2}-(x_{3}-x_{2})\in I\). Ara bé, per la proposició \myref{prop:propietats bàsiques anells} tenim que això és \(x_{1}-x_{3}\in I\), i per tant \(x_{1}\sim x_{3}\).
+				\item Transitiva: Siguin \(x_{1},x_{2},x_{3}\in R\) tals que \(x_{1}\sim x_{2}\) i \(x_{2}\sim x_{3}\). Per la definició d'\myref{def:ideal d'un anell} tenim que \(x_{3}-x_{2}\in I\), i per la proposició \myref{prop:condició equivalent a ideal d'un anell} tenim que \(x_{1}-x_{2}-(x_{3}-x_{2})\in I\). Ara bé, per la proposició \myref{prop:propietats bàsiques anells} tenim que això és \(x_{1}-x_{3}\in I\), i per tant \(x_{1}\sim x_{3}\).
 			\end{enumerate}
 			Per tant \(\sim\) és una relació d'equivalència.
 		\end{proof}
@@ -1528,7 +1528,7 @@
 		Siguin \(R\) i \(S\) dos anells commutatius amb \(1_{R}\neq0_{R}\) i \(1_{S}\neq0_{S}\) i \(f\colon R\longrightarrow S\) un morfisme entre anells. Aleshores
 		\[\ker(f)\text{ és un ideal de }R\quad\text{i}\quad\Ima(f)\text{ és un subanell de }S.\]
 		\begin{proof}
-			Siguin \(+_{R}\) la suma de \(R\), \(\ast_{R}\) el producte de \(R\), \(+_{S}\) la suma de \(S\) i \(\ast_{S}\) el producte de \(S\). Comencem veient que \(\ker(f)\) és un ideal de \(R\). Per l'observació \myref{obs:morfisme entre anells és morfisme entre grups} tenim que \(\ker(f)\) és un morfisme entre grups, i per la proposició \ref{prop:el nucli d'un morfisme és un subgrup normal del grup de sortda} tenim que \(\ker(f)\) és un subgrup del grup \(R\) amb la suma \(+_{R}\).
+			Siguin \(+_{R}\) la suma de \(R\), \(\ast_{R}\) el producte de \(R\), \(+_{S}\) la suma de \(S\) i \(\ast_{S}\) el producte de \(S\). Comencem veient que \(\ker(f)\) és un ideal de \(R\). Per l'observació \myref{obs:morfisme entre anells és morfisme entre grups} tenim que \(\ker(f)\) és un morfisme entre grups, i per la proposició \myref{prop:el nucli d'un morfisme és un subgrup normal del grup de sortda} tenim que \(\ker(f)\) és un subgrup del grup \(R\) amb la suma \(+_{R}\).
 			
 			Prenem \(x\in\ker(f)\) i \(r\in R\). Volem veure que \(r\ast_{R}r\in\ker(f)\). Tenim
 			\begin{align*}
@@ -1538,7 +1538,7 @@
 			\end{align*}
 			i per la definició de \myref{def:nucli d'un morfisme entre anells} tenim que \(r\ast_{R}x\in\ker(f)\), i per la proposició \myref{prop:condició equivalent a ideal d'un anell} tenim que \(\ker(f)\) és un ideal de \(R\).
 			
-			Veiem ara que \(\Ima(f)\) és un subanell de \(S\). Per l'observació \myref{obs:morfisme entre anells és morfisme entre grups} tenim que \(\Ima(f)\) és un morfisme entre grups, i per la proposició \ref{prop:la imatge d'un morfisme és un subgrup del grup d'arribada} tenim que \(\Ima(f)\) és un subgrup del grup \(S\) amb la suma \(+_{S}\).
+			Veiem ara que \(\Ima(f)\) és un subanell de \(S\). Per l'observació \myref{obs:morfisme entre anells és morfisme entre grups} tenim que \(\Ima(f)\) és un morfisme entre grups, i per la proposició \myref{prop:la imatge d'un morfisme és un subgrup del grup d'arribada} tenim que \(\Ima(f)\) és un subgrup del grup \(S\) amb la suma \(+_{S}\).
 			
 			Prenem \(x,y\in\Ima(f)\). Volem veure que \(x\ast_{S}y\in\Ima(f)\). Per la definició d'\myref{def:imatge d'un morfisme entre anells} tenim que existeixen \(x',y'\in R\) tals que \(f(x')=x\) i \(f(y')=y\). Ara bé, per la definició d'\myref{def:anell} tenim que \(x'\ast_{R}y'\in R\), i per tant
 			\begin{align*}
@@ -1665,9 +1665,9 @@
 		Sigui \(I\) un ideal d'un anell \(R\) amb \(I\neq R\). Aleshores
 		\[R/I\text{ és un domini d'integritat}\sii I\text{ és un ideal primer de }R.\]
 		\begin{proof} % Dreta i esquerra en comptes de suficient i necessàri
-			Siguin \(+\) la suma de \(R\) i \(\cdot\) el producte de \(R\). Comencem demostrant que la condició és suficient (\(\implica\)). Suposem doncs que \(R/I\) és un domini d'integritat i prenem \([a],[b]\in R/I\) tals que \([a]\cdot[b]=[0]\). Aleshores per la definició de \myref{def:anell quocient} tenim que \(a\cdot b\in I\). Ara bé, com que per hipòtesi \(R/I\) és un domini d'integritat tenim que ha de ser \([a]=[0]\) ó \([b]=[0]\), i per tant trobem que ha de ser \(a\in I\) o \(b\in I\), i per la definició d'\myref{def:ideal primer} trobem que \(I\) és un ideal primer de \(R\).
+			Siguin \(+\) la suma de \(R\) i \(\cdot\) el producte de \(R\). Comencem demostrant que la condició és suficient (\(\implica\)). Suposem doncs que \(R/I\) és un domini d'integritat i prenem \([a],[b]\in R/I\) tals que \([a]\cdot[b]=[0]\). Aleshores per la definició d'\myref{def:anell quocient} tenim que \(a\cdot b\in I\). Ara bé, com que per hipòtesi \(R/I\) és un domini d'integritat tenim que ha de ser \([a]=[0]\) ó \([b]=[0]\), i per tant trobem que ha de ser \(a\in I\) o \(b\in I\), i per la definició d'\myref{def:ideal primer} trobem que \(I\) és un ideal primer de \(R\).
 			
-			Veiem ara que la condició és necessària (\(\implicatper\)). Suposem doncs que \(I\) és un ideal primer de \(R\). Per la proposició \ref{prop:anell quocient} tenim que \(R/I\) és un anell commutatiu amb \(1\neq0\). Prenem doncs \(a\in R\), \(a\notin I\) i suposem que existeix \(b\in R\) tal que \([a]\cdot[b]=[0]\). Això és que \(a\cdot b\in I\), i com que per hipòtesi \(I\) és un ideal primer, per la definició d'\myref{def:ideal primer} trobem que ha de ser \(b\in I\), i per tant \([b]=[0]\) i per la definició de \myref{def:domini d'integritat} tenim que \(R/I\) és un domini d'integritat.
+			Veiem ara que la condició és necessària (\(\implicatper\)). Suposem doncs que \(I\) és un ideal primer de \(R\). Per la proposició \myref{prop:anell quocient} tenim que \(R/I\) és un anell commutatiu amb \(1\neq0\). Prenem doncs \(a\in R\), \(a\notin I\) i suposem que existeix \(b\in R\) tal que \([a]\cdot[b]=[0]\). Això és que \(a\cdot b\in I\), i com que per hipòtesi \(I\) és un ideal primer, per la definició d'\myref{def:ideal primer} trobem que ha de ser \(b\in I\), i per tant \([b]=[0]\) i per la definició de \myref{def:domini d'integritat} tenim que \(R/I\) és un domini d'integritat.
 		\end{proof}
 	\end{proposition}
 	\begin{corollary}
@@ -1908,6 +1908,7 @@
 		Siguin \(D\) un domini d'integritat amb el producte \(\cdot\), \(a\neq0\) un element no invertible de \(D\) i \(b,c\) dos elements de \(D\) tals que \(a=b\cdot c\). Aleshores direm que \(a\) és irreductible si \(b\) ó \(c\) són invertibles.
 	\end{definition}
 	\begin{proposition}
+		\label{prop:en un DI un primer és un irreductible}
 		Siguin \(D\) un domini d'integritat i \(p\) un element primer de \(D\). Aleshores \(p\) és irreductible.
 		\begin{proof}
 			Sigui \(\cdot\) el producte de \(D\). Suposem que \(a\) i \(b\) són dos elements de \(D\) tals que \(p=a\cdot b\). Per la definició de \myref{def:primer en un anell} tenim que ha de ser \(p\divides a\) ó \(p\divides b\). Si \(p\divides a\) tenim que \(a=\alpha\cdot p\) per a cert \(\alpha\in D\).
@@ -2018,7 +2019,7 @@
 			
 			Suposem que \(b_{1}\in X\), la demostració de l'altre opció és anàloga. Aleshores tenim, per l'observació \myref{obs:divisors són ideals continguts}, que \((a)\subset(b)\). Ara bé, també tindríem que \(b_{1}=b_{2}\cdot c_{2}\) per a certs \(b_{2},c_{2}\) elements no invertibles de \(N\) amb \(b_{2}\in X\) o \(c_{2}\in X\), i podem iterar aquest argument per construir
 			\[(a_{1})\subset(b_{1})\subset(b_{2})\subset(b_{3})\subset\dots\]
-			però això entra en contradicció amb la definició de \myref{def:anell Noetherià}, i per tant \(X=\emptyset\), com volíem veure.
+			però això entra en contradicció amb la definició d'\myref{def:anell Noetherià}, i per tant \(X=\emptyset\), com volíem veure.
 		\end{proof}
 	\end{lemma}
 	\subsection{Dominis d'ideals principals}
@@ -2057,7 +2058,7 @@
 			
 			Ara bé, com que per hipòtesi \(D\) és un domini d'ideals principals tenim, per la definició de \myref{def:DIP} que existeix \(a\in D\) tal que \(\mathcal{I}=(a)\), i per tant existeix \(n\) tal que \(a\in I_{n}\), i trobem que
 			\[\mathcal{I}=(a)\subseteq I_{n}\subseteq I_{n+k}\subseteq\mathcal{I}\]
-			per a tot \(k\in\mathbb{N}\), i pel \myref{thm:doble inclusió} trobem que \(I_{n}=I_{n+k}\) per a tot \(k\in\mathbb{N}\), i per la definició de \myref{def:anell Noetherià} trobem que \(D\) és un anell Noetherià.
+			per a tot \(k\in\mathbb{N}\), i pel \myref{thm:doble inclusió} trobem que \(I_{n}=I_{n+k}\) per a tot \(k\in\mathbb{N}\), i per la definició d'\myref{def:anell Noetherià} trobem que \(D\) és un anell Noetherià.
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}
@@ -2158,14 +2159,14 @@
 	\end{lemma}
 	\begin{theorem}
 		\label{thm:cos de fraccions}
-		Sigui \(D\) un domini d'integritat. Aleshores \(\cosdefraccions(D)\) és un cos.
+		Sigui \(D\) un domini d'integritat. Aleshores \(\cosdefraccions(D)\) és el mínim cos que conté~\(D\).
 %		Sigui \(D\) un domini d'integritat amb la suma \(+\) i el producte \(\cdot\). Aleshores \(\cosdefraccions(D)\) és un cos amb la suma \(+\) i el producte \(\cdot\).
 		\begin{proof}
 			%TODO
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}[Unicitat de \ensuremath{\cosdefraccions(D)}]
-		\labelname{Teorema d'unicitat del cos de fraccions d'un domini}\label{tmh:unicitat del cos de fraccions d'un domini}
+		\labelname{Teorema d'unicitat del cos de fraccions d'un domini}\label{thm:unicitat del cos de fraccions d'un domini}
 		Siguin \(D\) un domini d'integritat amb la suma \(+\) i el producte \(\cdot\) i \(\cosdefraccions_{1}(D)\) i \(\cosdefraccions_{2}(D)\) dos cossos  amb la suma \(+\) i el producte \(\cdot\). Aleshores
 		\[\cosdefraccions_{1}(D)\cong\cosdefraccions_{2}(D)\]
 		\begin{proof}
@@ -2205,7 +2206,8 @@
 		Aquesta definició té sentit per la proposició \myref{prop:l'anell de polinomis és un anell}.
 	\end{definition}
 	\begin{observation}
-		\(D\subseteq D[x]\).
+		\label{obs:un anell està contingut en el seu anell de polinomis}
+		\(R\subseteq R[x]\).
 	\end{observation}
 	\begin{theorem}[Teorema de la base de Hilbert]
 		Sigui \(R\) un anell Noetherià. Aleshores \(R[x]\) és un anell Noetherià.
@@ -2318,6 +2320,7 @@
 \section{Cossos finits}
 	\subsection{Propietats bàsiques dels cossos finits}
 	\begin{proposition}
+		\label{prop:un subcòs és un espai vectorial}
 		Siguin \(\mathbb{K}\) i \(\mathbb{E}\) dos cossos tals que \(\mathbb{K}\subseteq\mathbb{E}\). Aleshores \(\mathbb{E}\) és un \(\mathbb{K}\)-espai vectorial.
 		\begin{proof}
 			%TODO - Fer àlgebra lineal primer.
@@ -2387,6 +2390,7 @@
 		\[f'(x)=a_{1}+2\cdot a_{2}x+3\cdot a_{3}x^{2}+\dots+n\cdot a_{n}x^{n-1}.\]
 	\end{definition}
 	\begin{proposition}
+		\label{prop:propietats de la derivada formal}
 		Siguin \(\mathbb{K}\) un cos amb la suma \(+\) i el producte \(\cdot\) i \(f(x)\), \(g(x)\) dos polinomis de \(\mathbb{K}\). Aleshores es compleix
 		\begin{enumerate}
 			\item \((a\cdot f(x))'=a\cdot f'(x)\) per a tot \(a\in\mathbb{K}\).
